@@ -1,3 +1,9 @@
+1999-03-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* java-stub.el (java-print-native-method): Take phase argument.
+	(java-print-native-class): Loop over creating and using phase,
+	passing to java-print-native-method.
+
 1999-02-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (all, stubs): Mark as phony.
